# cpu-simple-GRPO

./: Cargo.toml  README.md  grpo_ref_split.py  pyproject.toml  ref_server.py
kernel/: ce_kernel.py  test_triton_kernel.py
regroup_ver/: grpo_regroup.py  ref_server_regroup.py
src/: main.rs
