[package]
name = "grpo-finetune"
version = "0.1.0"
edition = "2021"
# A short description of your project
description = "simple GRPO fine-tuning with Candle"

[dependencies]
# For huggingface hub sync (downloading model files, etc.)
hf-hub = "0.4.1"

# For Candle core library (tensors, device abstraction, etc.)
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }

# Candle NN module (layers, AdamW, basic ops)
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }

# Candle Transformers sub-crate for Qwen or GPT modeling
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }

# Examples code might be needed if we use helper functions from candle-examples
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
# For request-based blocking HTTP (reference server calls) with JSON
reqwest = { version = "0.11", features = ["blocking", "json"] }

# For tokenization (Hugging Face tokenizers)
tokenizers = "0.14.0"

# For JSON parsing, config reading, etc.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For reading/writing model config, or any advanced usage
serde_yaml = "0.9.0"
