[package]
name = "grpo-finetune"
version = "0.1.0"
edition = "2021"
description = "simple GRPO fine-tuning with Candle"

[dependencies]
anyhow = "1.0"

# hf-hub for downloading models from Hugging Face
hf-hub = "0.4.1"

# Candle from GitHub, version 0.8.1
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }

# For request-based blocking HTTP calls
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Tokenizers
tokenizers = "0.14.0"

# Serde for JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# If you use YAML or advanced config
serde_yaml = "0.9.0"

# For random sampling in generate_mode
rand = "0.8"
# For simple pattern matching
regex = "1.7"
