[project]
name = "simple-grpo"
version = "0.1.0"
description = ""
authors = [
    {name = "renancloudwalk",email = "renan@cloudwalk.io"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)", 
    "tqdm (>=4.67.1,<5.0.0)",
    "bottle (>=0.13.2,<0.14.0)",
    "tornado (>=6.4.2,<7.0.0)"
]

[project.extras]
gpu = [
    "deepspeed (>=0.16.4,<0.17.0)",
    "triton (>=3.2.0)",
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12", 
    "nvidia-cusparse-cu12",
    "nvidia-cusparselt-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvtx-cu12"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
